nats-micro/tests/ui/service_error_transparent_multiple_fields.stderr
error: #[error(transparent)] requires exactly one field
 --> tests/ui/service_error_transparent_multiple_fields.rs:5:5
  |
5 | /     #[error(transparent)]
6 | |     Inner(std::io::Error, String),
  | |_________________________________^
