nats-micro/tests/ui/service_error_transparent_multiple_fields.rs
use nats_micro::service_error;

#[service_error]
pub enum DemoError {
    #[error(transparent)]
    Inner(std::io::Error, String),
}

fn main() {}
